# mcp2

./: Dockerfile  README.md  pyproject.toml  server.py
configs/: config_loader.py
prompts/: todo_database_prompt.txt
resources/: database_todo_instructions.md
tools/: db_tools.py  math_tools.py  retrival_tools.py
